--- a/styles/main.css
+++ b/styles/main.css
@@ -312,52 +312,96 @@ template {
   display: none;
 }
 
-body {
-  font-family: "Montserrat", sans-serif;
-}
-
-.navigation {
-  background-color: #131313;
-  padding: 15px;
-}
-.navigation nav {
-  display: inline;
-}
-.navigation nav a {
-  color: #d9d9d9;
-}
-.navigation div {
-  color: #d9d9d9;
-  display: inline;
-}
-
-.container {
-  padding: 1rem;
-}
-.container button {
-  background-color: #ff0000;
-  color: #ffcccc;
-  border: 1px solid #cc0000;
-  border-radius: 10px;
-  cursor: pointer;
-  padding: 5px 10px;
-}
-.container h1 {
-  font-family: "Marck Script", cursive;
-  color: #ffa500;
-}
-
-.orange-btn {
-  background-color: #ffa500;
-  color: #ffedcc;
-  border: 1px solid #cc8400;
-  border-radius: 10px;
-  cursor: pointer;
-  padding: 5px 10px;
-}
-
-@media (min-width: 1024px) {
-  .navigation {
-    background-color: blue;
+@-webkit-keyframes slide {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
   }
+  50% {
+    -webkit-transform: translateX(150px) translateY(0);
+            transform: translateX(150px) translateY(0);
+  }
+  100% {
+    -webkit-transform: translateX(150px) translateY(200px);
+            transform: translateX(150px) translateY(200px);
+  }
+}
+
+@keyframes slide {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  50% {
+    -webkit-transform: translateX(150px) translateY(0);
+            transform: translateX(150px) translateY(0);
+  }
+  100% {
+    -webkit-transform: translateX(150px) translateY(200px);
+            transform: translateX(150px) translateY(200px);
+  }
+}
+@-webkit-keyframes rotate {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  50% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+    background-color: blue;
+    color: white;
+  }
+}
+@keyframes rotate {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  50% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+    background-color: blue;
+    color: white;
+  }
+}
+body, html {
+  padding: 1rem;
+  font-family: "Montserrat", sans-serif;
+  height: 100vh;
+}
+
+button {
+  margin-top: 2rem;
+  background-color: rgb(108, 165, 86);
+  color: white;
+  border: 1px solid rgb(76, 109, 63);
+  border-radius: 7px;
+  padding: 3px 7px;
+  cursor: pointer;
+}
+button:hover {
+  background-color: rgb(76, 109, 63);
+}
+
+.content {
+  margin-bottom: 3rem;
+}
+
+.big-red {
+  font-size: 2rem;
+  color: red;
+  font-weight: bold;
+}
+
+.hide {
+  display: none;
 }/*# sourceMappingURL=main.css.map */
